--- a/app/src/main/res/drawable/top_line.xml
+++ b/app/src/main/res/drawable/top_line.xml
@@ -12,7 +12,7 @@
         android:left="-3dp"
         android:right="-3dp">
         <shape>
-            <solid android:color="@color/owhite" />
+            <solid android:color="@color/transparent" />
             <stroke
                 android:width="1dp"
                 android:color="@color/oblack" />
