--- a/app/src/main/res/layout/font_pager.xml
+++ b/app/src/main/res/layout/font_pager.xml
@@ -5,12 +5,14 @@
 
     <TextView
         android:id="@+id/fontTextView"
+        android:layout_marginLeft="@dimen/pageMarginAndOffset"
         style="@style/TextAppearance.MaterialComponents.Headline6"
+        android:layout_marginRight="@dimen/pageMarginAndOffset"
+        android:textColor="?android:textColorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:textAlignment="center"
-        android:textStyle="bold"
         tools:text="Arvo">
 
     </TextView>
