--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,11 @@
         <attr name="title" format="string" />
 
     </declare-styleable>
+    <declare-styleable name="FullscreenAttrs">
+        <attr name="fullscreenBackgroundColor" format="color" />
+        <attr name="fullscreenTextColor" format="color" />
+    </declare-styleable>
+    <attr name="blurOverLayColor" format="color" />
+    <attr name="navblurOverLayColor" format="color" />
+    <attr name="dividerColor" format="color" />
 </resources>
