--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,10 +6,15 @@
     <color name="colorAccent">#7C4DFF</color>
     <color name="white">#FFFFFF</color>
     <color name="lwhite">#CCFFFFFF</color>
-    <color name="nwhite">#66FFFFFF</color>
+    <color name="nwhite">#E6FFFFFF</color>
     <color name="oblack">#0D000000</color>
     <color name="owhite">#0DFFFFFF</color>
     <color name="transparent">#00ffffff</color>
     <color name="lblack">#1A000000</color>
-    <color name="nblack">#66000000</color>
+    <color name="nblack">#E6000000</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="light_blue_A200">#FF40C4FF</color>
+    <color name="light_blue_A400">#FF00B0FF</color>
+    <color name="black_overlay">#66000000</color>
 </resources>
