--- a/base/src/main/res/layout/user_quote_card_view.xml
+++ b/base/src/main/res/layout/user_quote_card_view.xml
@@ -14,15 +14,15 @@
 
     <LinearLayout
         android:id="@+id/userContainer"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/userpic"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center"
             android:stateListAnimator="@animator/list_animator"
             android:transitionName="profilepic"
@@ -37,7 +37,7 @@
 
             <TextView
                 android:id="@+id/username"
-                style="@style/TextAppearance.MaterialComponents.Body1"
+                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -48,7 +48,7 @@
 
             <TextView
                 android:id="@+id/quoteDate"
-                style="@style/TextAppearance.MaterialComponents.Subtitle1"
+                style="@style/TextAppearance.MaterialComponents.Caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/md_white"
