--- a/manager/src/main/res/layout/fragment_icons.xml
+++ b/manager/src/main/res/layout/fragment_icons.xml
@@ -6,6 +6,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/managerRecycler"
         android:layout_width="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/pics_layout" />
