--- a/manager/src/main/res/menu/bottom_nav_menu.xml
+++ b/manager/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,21 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_home"
         android:title="@string/title_home" />
 
     <item
+        android:icon="@drawable/ic_icons"
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:title="Ícones" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/ic_covers"
+        android:title="Planos de fundo" />
+    <item
+        android:id="@+id/navigation_styles"
+        android:icon="@drawable/ic_baseline_architecture_24"
+        android:title="Estilos" />
 
 </menu>
