--- a/base/src/main/res/layout/pics_layout.xml
+++ b/base/src/main/res/layout/pics_layout.xml
@@ -7,7 +7,7 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:id="@+id/card"
-        android:layout_margin="@dimen/margin_default"
+        android:layout_margin="@dimen/margin_small"
         android:layout_height="100dp"
         android:checkable="true"
         android:stateListAnimator="@animator/list_animator"
