--- a/manager/src/main/res/layout/activity_manager.xml
+++ b/manager/src/main/res/layout/activity_manager.xml
@@ -6,12 +6,7 @@
     android:layout_width="match_parent"
     android:theme="@style/Motiv.Theme">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/managerToolbar"
-        style="@style/AppToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -34,10 +29,15 @@
         android:layout_height="match_parent"
         android:layout_above="@id/nav_view"
         app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
+    <include layout="@layout/blur_layout"/>
+    <androidx.appcompat.widget.Toolbar
+        android:background="@drawable/fade_gradient_inversed"
+        android:id="@+id/managerToolbar"
+        style="@style/AppToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentTop="true" />
+    ,
 
 </RelativeLayout>
