--- a/manager/src/main/res/layout/gif_bottomsheet.xml
+++ b/manager/src/main/res/layout/gif_bottomsheet.xml
@@ -26,6 +26,9 @@
             android:text="Tem deseja que deseja prosseguir com?"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
+        <include android:id="@+id/picView"
+            layout="@layout/pics_layout"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
