--- a/manager/src/main/res/layout/styles_recycler.xml
+++ b/manager/src/main/res/layout/styles_recycler.xml
@@ -10,8 +10,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/stylesRecycler"
         tools:listitem="@layout/style_preview_card"
-        android:layout_above="@id/styleEditContainer"
         android:orientation="horizontal"
+        android:layout_above="@+id/styleOptions"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
