--- a/manager/src/main/res/layout/style_card.xml
+++ b/manager/src/main/res/layout/style_card.xml
@@ -3,16 +3,20 @@
 
 
     <RelativeLayout
+        android:id="@+id/previewCard"
         android:background="@color/colorPrimaryDark"
+        android:foreground="?attr/selectableItemBackground"
+        android:stateListAnimator="@animator/list_animator"
         android:layout_width="match_parent"
         android:layout_height="170dp">
+
         <ImageView
             android:id="@+id/styleImage"
             android:scaleType="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
+
         <TextView
-            android:layout_marginTop="?attr/actionBarSize"
             android:id="@+id/styleText"
             android:gravity="center"
             android:textAlignment="center"
