--- a/manager/src/main/res/layout/style_preview_card.xml
+++ b/manager/src/main/res/layout/style_preview_card.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <RelativeLayout
-        android:background="@color/colorPrimaryDark"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/previewCard"
         android:layout_width="150dp"
+        android:layout_height="70dp"
         android:layout_margin="@dimen/margin_small"
-        android:layout_height="70dp">
+        android:foreground="?attr/selectableItemBackground"
+        android:stateListAnimator="@animator/list_animator"
+        app:cardBackgroundColor="?attr/colorPrimaryDark"
+        app:cardCornerRadius="@dimen/radius_default"
+        app:cardElevation="0dp">
+
         <ImageView
             android:id="@+id/styleImage"
             android:scaleType="center"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
+
         <TextView
             android:layout_centerInParent="true"
             android:id="@+id/styleText"
@@ -20,7 +28,7 @@
             android:text="Motiv"
             android:textSize="@dimen/default_quote_size"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </RelativeLayout>
+            android:layout_height="match_parent" />
+    </com.google.android.material.card.MaterialCardView>
 
 </layout>
