--- a/base/src/main/res/layout/user_picview.xml
+++ b/base/src/main/res/layout/user_picview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -11,6 +12,7 @@
         android:id="@+id/userpic"
         android:layout_width="32dp"
         android:layout_height="32dp"
+        tools:src="@drawable/avatarnotfound"
         android:layout_marginStart="-12dp"
         app:civ_circle_background_color="?android:textColorHint" />
 
