--- a/base/src/main/res/layout/quotes_card.xml
+++ b/base/src/main/res/layout/quotes_card.xml
@@ -91,11 +91,11 @@
                 android:layout_width="match_parent"
                 android:padding="@dimen/padding_small">
                 <LinearLayout
+                    android:paddingVertical="@dimen/padding_small"
                     android:id="@+id/quotebuttons"
                     android:layout_width="wrap_content"
                     android:layout_alignParentStart="true"
                     android:orientation="horizontal"
-                    android:layout_centerInParent="true"
                     android:layout_height="wrap_content">
 
                     <CheckBox
@@ -121,7 +121,7 @@
                         android:id="@+id/deleteButton"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginHorizontal="@dimen/margin_default"
+                        android:layout_marginEnd="@dimen/margin_default"
                         android:background="@color/transparent"
                         android:foreground="?attr/selectableItemBackground"
                         android:src="@drawable/ic_delete"
