--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -35,7 +35,7 @@
                     android:layout_height="100dp"
                     android:layout_gravity="center"
                     app:civ_border_width="0dp"
-                    tools:src="@drawable/ic__41_floppy_disk" />
+                    tools:src="@drawable/avatarnotfound" />
 
             </LinearLayout>
         </RelativeLayout>
