--- a/base/src/main/res/drawable/bottom_line.xml
+++ b/base/src/main/res/drawable/bottom_line.xml
@@ -15,7 +15,7 @@
             <solid android:color="@color/transparent" />
             <stroke
                 android:width="1dp"
-                android:color="@color/material_grey800" />
+                android:color="?attr/dividerColor" />
         </shape>
     </item>
 
