--- a/base/src/main/res/drawable/round.xml
+++ b/base/src/main/res/drawable/round.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/radius_default" />
+    <corners android:radius="@dimen/default_radius" />
 
 
     <!-- below code for different radius for each corner. -->
